# applocalconfig

./: .gitignore  CMakeLists.txt  README.md  appveyor.yml
.github/workflows/: CI_publish_release.yml  CI_windows.yml
cmake/: InstallRequiredSystemLibraries.cmake
src/: AppLocalConfig.cpp  CMakeLists.txt
src/AppLocalVerify/: AppLocalVerify.cpp  CMakeLists.txt  applocalverify.manifest  applocalverify.rc  codesignextract.cpp  codesignextract.hpp  stdafx.cpp  stdafx.h  targetver.h
